src/objects/Account_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Account_Reference__c</fullName>
        <label>Account Reference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account References</relationshipLabel>
        <relationshipName>Account_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Site__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>spouse_First_Name__c</fullName>
        <label>spouse First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Account Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Account Reference  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>